# DbMessenger

./: .gitignore  Accounts.h  Accounts.pgc  CMakeLists.txt  Context.h  Context.pgc  Dialogs.h  Dialogs.pgc  Dockerfile  IO.c  IO.h  LICENSE  Locks.h  Locks.pgc  Makefile  Messages.h  Messages.pgc  README.md  docker-compose.yml  main.c  main.pgc
